force-app/main/default/objects/Performance_Data__c/fields/Stocks__c.field-meta.xml
<CustomField>
    <fullName>Stocks__c</fullName>
    <label>Stocks</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>