force-app/main/default/objects/Performance_Data__c/fields/Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Support_Case__c</fullName>
    <label>Support Cases</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>