force-app/main/default/objects/Performance_Data__c/fields/Targeted_Country__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>optional</inlineHelpText>
    <label>Targeted Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeted_Country__c.Merchant__c</field>
            <operation>equals</operation>
            <valueField>$Source.Merchant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeted_Country__c</referenceTo>
    <relationshipName>Business_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>