force-app/main/default/objects/Performance_Data__c/fields/Targeted_Country_Copy__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country_Copy__c</fullName>
    <description>Used in the field [Cumulated Sales] - Merchant Object</description>
    <label>Targeted Country Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>