force-app/main/default/objects/Performance_Data__c/fields/TECH_Accessories__c.field-meta.xml
<CustomField>
    <fullName>TECH_Accessories__c</fullName>
    <description>Champ technique pour Process builder</description>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
  &apos;E_U&apos;,
    IF(  Cases_accessories__c&gt;=VALUE($Label.MP_EntryCases_EU_Sales_Accessories_Rate) &amp;&amp; Missing_Accessories__c  &gt;=  
    VALUE($Label.MP_EntryRate_EU_Sales_Accessories_Rate) , 1, 0),
  &apos;U_S&apos;,
    IF( Cases_accessories__c&gt;= VALUE($Label.MP_EntryCases_US_Sales_Accessories_Rate) &amp;&amp; Missing_Accessories__c  &gt;=  VALUE($Label.MP_EntryRate_US_Sales_Accessories_Rate) , 1, 0),
   0
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Accessories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>