force-app/main/default/objects/Performance_Data__c/fields/TECH_Average_number_of_messages_order__c.field-meta.xml
<CustomField>
    <fullName>TECH_Average_number_of_messages_order__c</fullName>
    <formula>if( NOT(ISPICKVAL(Merchant__r.Stage_Buyback__c,&quot;Buyback NMO&quot;)),   
CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Average_number_of_messages_order__c&gt;=VALUE($Label.QualityCaseAvgNbOfMessages_order) 
&amp;&amp; Average_number_of_messages_order__c &gt;=
VALUE($Label.QualityRateAvgNbOfMessages_order) , 1, 0),
&apos;U_S&apos;,
IF( Cases_Average_number_of_messages_order__c&gt;= VALUE($Label.QualityCaseAvgNbOfMessages_orderUS) 
&amp;&amp; Average_number_of_messages_order__c &gt;= VALUE($Label.QualityRateAvgNbOfMessages_orderUS) , 1, 0),
0
)
,
CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Average_number_of_messages_order__c&gt;=VALUE($Label.QualityCaseAvgNbOfMessages_order_NMO) 
&amp;&amp; Average_number_of_messages_order__c &gt;=
VALUE($Label.QualityRateAvgNbOfMessages_order_NMO) , 1, 0),
&apos;U_S&apos;,
IF( Cases_Average_number_of_messages_order__c&gt;= VALUE($Label.QualityCaseAvgNbOfMessages_orderUS_NMO) 
&amp;&amp; Average_number_of_messages_order__c &gt;= VALUE($Label.QualityRateAvgNbOfMessages_orderUS_NMO) , 1, 0),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Average_number_of_messages_order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>