force-app/main/default/objects/Performance_Data__c/fields/TECH_BuybackLateProcessingRate__c.field-meta.xml
<CustomField>
    <fullName>TECH_BuybackLateProcessingRate__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Late_Processed_Cases__c&gt;=VALUE($Label.MP_EntryCases_EU_Buyback_Late_Processing_rate) &amp;&amp; 
			Late_Processing_Rate__c &gt;= VALUE($Label.MP_EntryRate_EU_Buyback_Late_Processing_rate), 1, 0 )
,
&apos;U_S&apos;,
IF( Late_Processed_Cases__c&gt;=VALUE($Label.MP_EntryCases_US_Buyback_Late_Processing_rate) &amp;&amp; 
			Late_Processing_Rate__c &gt;= VALUE($Label.MP_EntryRate_US_Buyback_Late_Processing_rate), 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_BuybackLateProcessingRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>