force-app/main/default/objects/Performance_Data__c/fields/TECH_Cancellation_Buyback__c.field-meta.xml
<CustomField>
    <fullName>TECH_Cancellation_Buyback__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cancelled_Cases__c&gt;=VALUE($Label.MP_EntryCases_EU_Buyback_Cancellation_Functional_rate) &amp;&amp; Cancellation_Rate__c &gt;=VALUE($Label.MP_EntryRate_EU_Buyback_Cancellation_Functional_rate), 1, 0 )
,
&apos;U_S&apos;,
IF( Cancelled_Cases__c&gt;=VALUE($Label.MP_EntryCases_US_Buyback_Cancellation_Functional_rate) &amp;&amp; Cancellation_Rate__c &gt;=VALUE($Label.MP_EntryRate_US_Buyback_Cancellation_Functional_rate) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Cancellation Buyback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>