force-app/main/default/objects/Performance_Data__c/fields/TECH_CSAT__c.field-meta.xml
<CustomField>
    <fullName>TECH_CSAT__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( CSAT__c &lt;&gt; 0 &amp;&amp; CSAT__c &lt;= VALUE( $Label.MP_EntryRate_EU_Sales_CSAT ) &amp;&amp; Cases_CSAT__c &gt;= VALUE( $Label.MP_EntryCases_EU_Sales_CSAT), 1, 0 ),
&apos;U_S&apos;, 
IF( CSAT__c &lt;&gt; 0 &amp;&amp; CSAT__c &lt;= VALUE($Label.MP_EntryRate_US_Sales_CSAT) &amp;&amp; Cases_CSAT__c &gt;= VALUE($Label.MP_EntryCases_US_Sales_CSAT), 1,0 ),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>