force-app/main/default/objects/Performance_Data__c/fields/TECH_Delivery__c.field-meta.xml
<CustomField>
    <fullName>TECH_Delivery__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Merchant__r.Cumulated_sales_last_30_days__c &lt;100  &amp;&amp;  Cases_Delivery__c &gt; VALUE( $Label.QualityCaseDelivery ), 1, 
IF( Merchant__r.Cumulated_sales_last_30_days__c &gt;=100 &amp;&amp; Cases_Delivery__c &gt; VALUE( $Label.QualityCaseDelivery ) &amp;&amp;  Delivery_Problems__c &gt;= VALUE( $Label.QualityRateDelivery ), 1, 0 ) 
),
&apos;U_S&apos;,
IF( Cases_Delivery__c&gt;= VALUE($Label.QualityCaseDeliveryUS) &amp;&amp; Delivery_Problems__c &gt;= VALUE($Label.QualityRateDeliveryUS) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>