force-app/main/default/objects/Performance_Data__c/fields/TECH_Late_responses__c.field-meta.xml
<CustomField>
    <fullName>TECH_Late_responses__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,&apos;E_U&apos;,
IF( Cases_Late_responses__c  &gt;= VALUE( $Label.MP_EntryCases_EU_Sales_Late_Response_Rate ) &amp;&amp;  Late_Responses__c &gt;= VALUE( $Label.MP_EntryRate_EU_Sales_Late_Response_Rate ), 1, 0 ) ,
&apos;U_S&apos;,
IF( Cases_Late_responses__c &gt;= VALUE($Label.MP_EntryCases_US_Sales_Late_Response_Rate) &amp;&amp; Late_Responses__c &gt;= VALUE( $Label.MP_EntryRate_US_Sales_Late_Response_Rate ) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Late responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>