force-app/main/default/objects/Performance_Data__c/fields/TECH_On_hold__c.field-meta.xml
<CustomField>
    <fullName>TECH_On_hold__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( On_hold_Rate__c&gt;= VALUE($Label.MP_EntryRate_EU_Buyback_Pending_Order_rate) &amp;&amp; On_hold_Cases__c &gt;= VALUE($Label.MP_EntryCases_EU_Buyback_Pending_Order_rate) , 1, 0 )
,
&apos;U_S&apos;,
IF( On_hold_Rate__c&gt;= VALUE($Label.MP_EntryRate_US_Buyback_Pending_Order_rate) &amp;&amp; On_hold_Cases__c &gt;= VALUE($Label.MP_EntryCases_US_Buyback_Pending_Order_rate) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH On-hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>