force-app/main/default/objects/Performance_Data__c/fields/TECH_Pending_orders__c.field-meta.xml
<CustomField>
    <fullName>TECH_Pending_orders__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Pending_orders_rate__c&gt;= VALUE($Label.MP_EntryRate_EU_Buyback_Pending_Order_rate) &amp;&amp; Cases_Pending_orders_rate__c &gt;= VALUE($Label.MP_EntryCases_EU_Buyback_Pending_Order_rate) , 1, 0 )
,
&apos;U_S&apos;,
IF( Pending_orders_rate__c&gt;= VALUE($Label.MP_EntryRate_US_Buyback_Pending_Order_rate) &amp;&amp; Cases_Pending_orders_rate__c &gt;= VALUE($Label.MP_EntryCases_US_Buyback_Pending_Order_rate) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Pending_orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>