force-app/main/default/objects/Performance_Data__c/fields/Tech_Policy_Violation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Policy_Violation__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF(  Policy_Violation__c  &gt;= VALUE(  $Label.MP_EntryCases_EN_Policy_Violation  ) , 1, 0 )
,
&apos;U_S&apos;,
IF( Policy_Violation__c  &gt;= VALUE(  $Label.MP_EntryCases_US_Policy_Violation  ) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Policy Violation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>