force-app/main/default/objects/Performance_Data__c/fields/TECH_Special_Process_to_launch__c.field-meta.xml
<CustomField>
    <fullName>TECH_Special_Process_to_launch__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Special Process to launch</label>
    <type>Checkbox</type>
</CustomField>