force-app/main/default/objects/Performance_Data__c/fields/TECH_Unprocessed_order_D_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_Unprocessed_order_D_2__c</fullName>
    <formula>if( NOT(ISPICKVAL(Merchant__r.Stage_Buyback__c,&quot;Buyback NMO&quot;)),   
CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Unprocessed_order_rate_D_2__c&gt;=VALUE($Label.QualityCaseUnprocessedOrder_D2) 
&amp;&amp; Unprocessed_order_rate_D_2__c &gt;=
VALUE($Label.QualityRateUnprocessedOrder_D2) , 1, 0),
&apos;U_S&apos;,
IF( Cases_Unprocessed_order_rate_D_2__c&gt;= VALUE($Label.QualityCaseUnprocessedOrder_D2US) 
&amp;&amp; Unprocessed_order_rate_D_2__c &gt;= VALUE($Label.QualityRateUnprocessedOrder_D2US) , 1, 0),
0
)
,
CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Unprocessed_order_rate_D_2__c&gt;=VALUE($Label.QualityCaseUnprocessedOrder_D2_NMO) 
&amp;&amp; Unprocessed_order_rate_D_2__c &gt;=
VALUE($Label.QualityRateUnprocessedOrder_D2_NMO) , 1, 0),
&apos;U_S&apos;,
IF( Cases_Unprocessed_order_rate_D_2__c&gt;= VALUE($Label.QualityCaseUnprocessedOrder_D2US_NMO) 
&amp;&amp; Unprocessed_order_rate_D_2__c &gt;= VALUE($Label.QualityRateUnprocessedOrder_D2US_NMO) , 1, 0),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Unprocessed_order_D_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>