force-app/main/default/objects/Performance_Data__c/fields/Tech_Untracked_Orders_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tech_Untracked_Orders_Rate__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Untracked_Delivery__c &gt;= VALUE($Label.MP_EntryCases_EU_Sales_Untracked_Orders_Rate ) &amp;&amp; Untracked_Delivery_Rate__c &gt;= VALUE($Label.MP_EntryRate_EU_Sales_Untracked_Orders_Rate ), 1, 0 )
,
&apos;U_S&apos;,
IF( Cases_Untracked_Delivery__c&gt;= VALUE($Label.MP_EntryCases_US_Sales_Untracked_Orders_Rate) &amp;&amp; Untracked_Delivery_Rate__c &gt;= VALUE($Label.MP_EntryRate_US_Sales_Untracked_Orders_Rate) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Untracked Orders Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>