force-app/main/default/objects/Performance_Data__c/fields/TECH_Wrong__c.field-meta.xml
<CustomField>
    <fullName>TECH_Wrong__c</fullName>
    <formula>CASE( Merchant__r.RecordType.DeveloperName,
&apos;E_U&apos;,
IF( Cases_Wrong__c  &gt;= VALUE( $Label.MP_EntryCases_EU_Sales_Wrong_Product_Rate ) &amp;&amp;  Wrong_items__c &gt;= VALUE( $Label.MP_EntryRate_EU_Sales_Wrong_Product_Rate ), 1, 0 ) 
,
&apos;U_S&apos;,
IF( Cases_Wrong__c&gt;= VALUE($Label.MP_EntryCases_US_Sales_Wrong_Product_Rate) &amp;&amp; Wrong_items__c &gt;= VALUE($Label.MP_EntryRate_US_Sales_Wrong_Product_Rate) , 1, 0),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Wrong</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>