force-app/main/default/objects/Performance_Data__c/fields/Temporal_Granularity__c.field-meta.xml
<CustomField>
    <fullName>Temporal_Granularity__c</fullName>
    <label>Temporal Granularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temporal_Granularities</valueSetName>
    </valueSet>
</CustomField>