force-app/main/default/objects/Performance_Data__c/fields/Unprocessed_order_rate_D_2__c.field-meta.xml
<CustomField>
    <fullName>Unprocessed_order_rate_D_2__c</fullName>
    <label>Unprocessed order rate D+2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>