force-app/main/default/objects/Performance_Data__c/fields/Used_for_MP_creation__c.field-meta.xml
<CustomField>
    <fullName>Used_for_MP_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for MP creation</label>
    <type>Checkbox</type>
</CustomField>