force-app/main/default/objects/Performance_Data__c/fields/View_details__c.field-meta.xml
<CustomField>
    <fullName>View_details__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, &quot;View details&quot;, &quot;_blank&quot;)</formula>
    <label>View details</label>
    <type>Text</type>
</CustomField>