force-app/main/default/objects/Performance_Data__c/fields/Wrong_items__c.field-meta.xml
<CustomField>
    <fullName>Wrong_items__c</fullName>
    <label>Wrong items</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>