force-app/main/default/objects/Performance_Data__c/recordTypes/Quality.recordType-meta.xml
<RecordType>
    <fullName>Quality</fullName>
    <active>true</active>
    <label>Quality</label>
</RecordType>