force-app/main/default/objects/Performance_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Merchant__c</columns>
    <columns>Defectives__c</columns>
    <columns>CSAT__c</columns>
    <columns>Cases_CSAT__c</columns>
    <columns>Cases_Processing_time_functional__c</columns>
    <columns>Cases_Response_time__c</columns>
    <columns>Counter_offer_rate_functional__c</columns>
    <columns>Processing_time_functional__c</columns>
    <columns>View_details__c</columns>
    <columns>Sales__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Temporal_Granularity__c</field>
        <operation>equals</operation>
        <value>Daily</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Performance_Data__c.Quality</value>
    </filters>
    <label>All Merchants - Quality data</label>
</ListView>