force-app/main/default/objects/Performance_Data__c/listViews/All_Merchant_Business_Performances.listView-meta.xml
<ListView>
    <fullName>All_Merchant_Business_Performances</fullName>
    <columns>Date__c</columns>
    <columns>Merchant__c</columns>
    <columns>Buyboxes__c</columns>
    <columns>Stocks__c</columns>
    <columns>Sales__c</columns>
    <columns>Listings__c</columns>
    <columns>GMV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Temporal_Granularity__c</field>
        <operation>equals</operation>
        <value>Daily</value>
    </filters>
    <filters>
        <field>Targeted_Country__c</field>
        <operation>equals</operation>
    </filters>
    <label>Daily Business Performances</label>
</ListView>